[project]
name = "jovi_help"
description = "Inline help panel for ComfyUI Nodes with remote HTML/Markdown support."
version = "1.0.1"
license = { file = "LICENSE" }
readme = "README.md"
authors = [{ name = "Alexander G. Morano", email = "amorano@gmail.com" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Developers",
]
requires-python = ">=3.11"
dependencies = [
    "aiohttp",
    "loguru",
    "markdownify"
]

[project.urls]
Homepage = "https://github.com/Amorano/Jovi_Help"
Documentation = "https://github.com/Amorano/Jovi_Help/wiki"
Repository = "https://github.com/Amorano/Jovi_Help"
Issues = "https://github.com/Amorano/Jovi_Help/issues"

[tool.comfy]
PublisherId = "amorano"
DisplayName = "Jovi Help"
Icon = "https://raw.githubusercontent.com/Amorano/Jovimetrix-examples/refs/heads/master/res/logo-jovi_help.png"
